# spotify-to-supabase

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  test_supabase_crud.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  LLM_DEVELOPMENT.md  SETUP.md  Spotify.md
notebooks/: README.md
notebooks/01-setup/: environment-test.ipynb
notebooks/02-authentication/: spotify-oauth-test.ipynb  supabase-connection-test.ipynb
notebooks/03-spotify-api/: get-saved-tracks.ipynb
notebooks/04-supabase-crud/: create-track.ipynb
prompts/: README.md
src/adapters/spotify/: auth.py  repository.py
src/adapters/supabase/: client.py  repository.py
src/core/entities/: track.py
src/core/repositories/: base_repository.py  spotify_repository.py
src/core/services/: supabase_sync_service.py  supabase_test_service.py  sync_service.py  tracks_service.py
src/infrastructure/: README.md
src/infrastructure/config/: settings.py
src/infrastructure/database/legacy/: create_artists.sql  create_song_artists.sql  create_songs.sql  verify_migration.sql  view_songs_with_artist.sql
src/infrastructure/database/migrate_from_spotify/: 01_move_to_artists.sql  02_move_to_songs_with_existing_spotify_url.sql  03_move_to_songs_with_unique_spotify_url.sql  04_move_to_songs_artists.sql  05_move_to_songs_artists_with_names.sql
src/infrastructure/database/migrations/: 01_create_spotify_artists_table.sql  02_create_spotify_albums_table.sql  03_create_spotify_tracks_table.sql  04_create_spotify_track_artists_table.sql  05_create_spotify_album_artists_table.sql  06_create_track_details_view.sql
src/infrastructure/database/spotify_new_data/: 01_create_spotify_artists_table.sql  02_create_spotify_albums_table.sql  README.md
src/presentation/api/v1/: README.md  auth.py  deps.py  tracks.py
src/presentation/schemas/: track.py
