[project]
name = "spotify-supabase-tracker"
version = "0.1.0"
description = "Aplicación FastAPI para sincronizar canciones de Spotify con Supabase"
authors = [{name = "Miguel Angel"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.104.1",
    "httpx==0.25.2",
    "ipykernel==6.26.0",
    "jupyter==1.0.0",
    "matplotlib==3.8.0",
    "pandas==2.1.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "python-dotenv==1.0.0",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.6",
    "seaborn==0.13.0",
    "supabase==2.3.0",
    "uvicorn[standard]==0.24.0",
]

[project.optional-dependencies]
dev = [
    "black==23.11.0",
    "isort==5.12.0",
    "flake8==6.1.0",
    "mypy==1.7.0",
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.hatch.build]
packages = ["src"]
